# telar

./: .gitignore  DOCKER_SETUP.md  ONBOARDING.md  QA_PLATFORM.md  README.md  SEMANTIC_SEARCH.md  Telar.code-workspace
.claude/: launch.json  settings.local.json  slack-channel
.github/workflows/: build-and-push-prod.yml  build-and-push.yml
apps/: .dockerignore
apps/admin-rag/: .env.example  Dockerfile  README.md  app.py  requirements.txt
apps/agents/: .env.example  .gitignore  Dockerfile  __init__.py  api.py  artisan_support_api.py  docker-compose.yml  helpers.py  joyitas_search_api.py  langsmith.py  main.py  requirements.txt  search_api.py  whatsapp_api.py
apps/api/: .cursorrules  .dockerignore  .env.example  .env.google-oauth.example  .gitignore  Dockerfile  ENUMS_SUMMARY.md  INCREMENTO-PRECIOS-README.md  OID_1009_EXPLANATION.md  PRODUCTS_NEW_ARCHITECTURE.md  artisan_shops.csv  docker-compose.yml  docker-entrypoint.sh  init-db.sql  nest-cli.json  package-lock.json  package.json  tsconfig.json
apps/artisans-web/: .cursorignore  .cursorrules  .dockerignore  .env  .gitignore  ANALISIS_ARTISAN_SHOPS.md  DESIGN.md  Dockerfile  ENDPOINTS_MIGRATION_GUIDE.md  FIX_DASHBOARD_FINAL_LOOPS.md  FIX_INFINITE_LOOP_PETICIONES.md  FIX_USER_PROFILES_PATCH.md  FLUJO_LOGIN_DASHBOARD_PETICIONES.md  FUNCIONES_useFusedMaturityAgent.md  index.html  (+22 more)
docs/: audit-artisans-web.md  audit-marketplace-web.md  audit-moderation-admin.md  telar_architecture.md
experiments/products_shop_manager/: main.py  pyproject.toml
scripts/: backfill_shops_location.sql  download_supabase_storage.py
(+2758 files in other folders)
